[package]
name = "acme-client-rs"
version = "2.3.3"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
base64 = "0.22"
idna = "1"
secrecy = { version = "0.10", features = ["serde"] }
zeroize = "1"
clap = { version = "4.6", features = ["derive", "env"] }
ecdsa = { version = "0.16", features = ["signing"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "rand_core"] }
hmac = "0.12"
hickory-resolver = { version = "0.26", default-features = false, features = ["tokio", "system-config", "dnssec-aws-lc-rs"] }
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
p384 = { version = "0.13", features = ["ecdsa", "pem"] }
p521 = { version = "0.13", features = ["ecdsa", "pem"] }
pem = "3"
pkcs8 = { version = "0.11", features = ["encryption"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rcgen = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2", "json"] }
rsa = { version = "0.9", features = ["sha2"] }
scrypt = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = "0.3"
tokio = { version = "1", features = ["full"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
x509-parser = "0.18"
[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
missing_docs = "warn"

[lints.clippy]
# ── Correctness / safety (deny) ──────────────────────────────────────────────
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
indexing_slicing = "deny"
wildcard_enum_match_arm = "deny"
fn_params_excessive_bools = "deny"
match_wild_err_arm = "deny"
fallible_impl_from = "deny"
mem_forget = "deny"
lossy_float_literal = "deny"
float_cmp = "deny"
float_cmp_const = "deny"
# Unsafe / alignment hazards. Defense-in-depth behind `unsafe_code = "forbid"`
# above — these cannot fire while unsafe is forbidden, but stay correct if the
# forbid is ever weakened to deny. Sourced from RUST_GUIDELINES §9
# "Lints for LLM-generated code".
cast_ptr_alignment = "deny"
transmute_ptr_to_ref = "deny"
not_unsafe_ptr_arg_deref = "deny"
# ── Panic prevention (deny) ──────────────────────────────────────────────────
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
# ── Debug artifacts (deny) ───────────────────────────────────────────────────
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"
# ── Performance / API hygiene (warn) ─────────────────────────────────────────
redundant_clone = "warn"
implicit_clone = "warn"
needless_pass_by_value = "warn"
ptr_arg = "warn"
inefficient_to_string = "warn"
large_stack_arrays = "warn"
large_stack_frames = "warn"
mutex_atomic = "warn"
# Not covered by the nursery group opt-in on 1.96 — enabled explicitly.
cognitive_complexity = "warn"
# ── Broad opt-in groups (warn) ───────────────────────────────────────────────
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pedantic noise opt-outs
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
multiple_crate_versions = "allow"
# Nursery noise opt-outs (high false-positive rate for a binary crate)
redundant_pub_crate = "allow"        # Codebase uses pub(crate) consistently; style choice.
missing_const_for_fn = "allow"       # Churns signatures, no perf gain in a binary.
unnecessary_wraps = "allow"          # Tests uniformly return Result<()> for future-proofing.
option_if_let_else = "allow"         # Often less readable than the explicit form.
or_fun_call = "allow"                # False positives on cheap closures.
ref_option = "allow"                 # `&Option<T>` is sometimes the right API.
needless_pass_by_ref_mut = "allow"   # RunContext threaded as &mut for API uniformity across the run flow.

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.31", features = ["user", "fs"] }

# ── Release profile: smallest hardened binary ────────────────────────────────

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Full link-time optimization (cross-crate inlining + dead code elimination)
codegen-units = 1      # Single codegen unit - best optimization, slower compile
panic = "abort"        # No unwinding tables - smaller binary, immediate abort on panic
strip = true           # Strip all symbols and debug info from the binary
debug = 0              # No debug info generated at all (DWARF, PDB, etc.)
debug-assertions = false
overflow-checks = true # Catch integer overflow → panic → abort (defense in depth)

[dev-dependencies]
tempfile = "3.27.0"
